// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SectionHeading render a deprecated section heading 1`] = `
<h2
  className="rsg--heading-5 rsg--heading2-7"
  id="section"
>
  <a
    className="rsg--sectionName-2 rsg--isDeprecated-3"
    href="/section"
  >
    A Section
  </a>
</h2>
`;

exports[`SectionHeading render a section heading 1`] = `
<h2
  className="rsg--heading-5 rsg--heading2-7"
  id="section"
>
  <a
    className="rsg--sectionName-2"
    href="/section"
  >
    A Section
  </a>
</h2>
`;
